(general) Make sure dropdown menu have z-index larger than sticky-top components

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -169,7 +169,7 @@
 
 .show > .dropdown-menu {
   opacity: 1;
-  z-index: 1000;
+  z-index: 1021;
 }
 
 .dropdown-menu {
